--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,19 @@
 /* Base CSS */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-:root{
-    --yellow: #FEBB12;
-    --orange: #EE7C0F;
+:root {
+    --yellow: #febb12;
+    --orange: #ee7c0f;
     --persian-blue: #023356;
     --dark-blue: #061843;
-    --nice-blue: #006FAE;
-    --pink: #E90964;
-    --purple: #AE16CC;
-    --white: #FFFFFF;
-    --grey: #8F9BAD;
-    --light-grey: #EBEBEB;
+    --nice-blue: #006fae;
+    --light-greenish-blue: #138086;
+    --bright-blue: #4adede;
+    --pink: #e90964;
+    --purple: #ae16cc;
+    --white: #ffffff;
+    --grey: #8f9bad;
+    --light-grey: #ebebeb;
     --black: #000000;
 }
 
@@ -142,7 +144,11 @@ body.down .header-default.clone {
     background: var(--purple);
     border-radius: 25px;
     background-color: var(--dark-blue);
-    background-image: linear-gradient(315deg, var(--dark-blue) 0%, var(--nice-blue) 74%);
+    background-image: linear-gradient(
+        315deg,
+        var(--dark-blue) 0%,
+        var(--light-greenish-blue) 74%
+    );
 }
 
 .navbar-brand {
@@ -185,7 +191,11 @@ body.down .header-default.clone {
 .dropdown-menu li::after {
     content: "";
     background: var(--light-grey);
-    background: linear-gradient(to right, var(--light-grey) 0%, transparent 100%);
+    background: linear-gradient(
+        to right,
+        var(--light-grey) 0%,
+        transparent 100%
+    );
     display: block;
     height: 1px;
     width: 100%;
@@ -226,7 +236,7 @@ body.down .header-default.clone {
     height: 0;
     margin: 0.1rem 0;
     overflow: hidden;
-    border-top: 1px solid #DDD;
+    border-top: 1px solid var(--white);
 }
 
 .dropdown-toggle::after {
@@ -337,11 +347,15 @@ button:focus {
 }
 
 .icon-button {
-    color: #fff;
+    color: var(--white);
     border: 0;
     border-radius: 50%;
     background-color: var(--dark-blue);
-    background-image: linear-gradient(315deg, var(--dark-blue) 0%, var(--nice-blue) 74%);
+    background-image: linear-gradient(
+        315deg,
+        var(--dark-blue) 0%,
+        var(--light-greenish-blue) 74%
+    );
     background-size: auto 200%;
     display: inline-flex;
     justify-content: center;
@@ -465,8 +479,12 @@ button:focus {
     margin-bottom: 10px;
     margin-top: 10px;
     width: 100%;
-    background: #ebebeb;
-    background: linear-gradient(to right, #ebebeb 0%, transparent 100%);
+    background: var(--light-grey);
+    background: linear-gradient(
+        to right,
+        var(--light-grey) 0%,
+        transparent 100%
+    );
 }
 
 .canvas-menu .vertical-menu li.active a {
@@ -570,12 +588,16 @@ button:focus {
     color: var(--white);
     padding: 9.5px 36px;
     background-color: var(--dark-blue);
-    background-image: linear-gradient(315deg, var(--dark-blue) 0%, var(--nice-blue) 74%);
+    background-image: linear-gradient(
+        315deg,
+        var(--dark-blue) 0%,
+        var(--light-greenish-blue) 74%
+    );
     background-size: 200% auto;
 }
 
 .btn-default:hover {
-    color: #fff;
+    color: var(--white);
     background-position: right center;
 }
 
@@ -602,4 +624,186 @@ button:focus {
     border-color: var(--nice-blue);
     outline: 0;
     box-shadow: none;
+}
+
+/* Hero Section */
+section {
+    position: relative;
+}
+
+.hero {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 1040px;
+    width: 100%;
+}
+
+.hero::after {
+    content: "";
+    background: var(--dark-blue);
+    display: block;
+    left: 0;
+    opacity: 0.8;
+    top: 0;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+}
+
+.post .category-badge {
+    color: var(--white);
+    font-size: 13px;
+    border-radius: 25px;
+    display: inline-block;
+    padding: 6px 11px;
+    line-height: 1;
+    left: 20px;
+    top: 20px;
+    z-index: 1;
+    background-color: var(--dark-blue);
+    background-image: linear-gradient(
+        315deg,
+        var(--dark-blue) 0%,
+        var(--light-greenish-blue) 74%
+    );
+    background-size: 200% auto;
+    transition: all 0.3s ease-in-out;
+}
+
+.post .category-badge:hover {
+    background-position: right center;
+}
+
+.post .thumb {
+    position: relative;
+}
+
+.post .thumb.rounded .inner {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.post .thumb img {
+    transform: scale(1);
+    transition: all 0.3s ease-in-out;
+}
+
+.post .thumb:hover img {
+    transform: scale(1.07);
+}
+
+.post .post-title a {
+    color: var(--dark-blue);
+}
+
+.post .post-title a:hover {
+    color: var(--nice-blue);
+}
+
+.post .meta {
+    font-size: 14px;
+    color: var(--light-grey);
+}
+
+.post .meta a {
+    color: var(--light-grey);
+    font-weight: 400;
+}
+
+.post .meta a:hover {
+    color: var(--yellow);
+}
+
+.post .meta i {
+    vertical-align: middle;
+}
+
+.post .meta li:last-child::after {
+    content: "";
+    display: none;
+}
+
+.post .meta li::after {
+    content: "";
+    display: inline-block;
+    background-color: var(--persian-blue);
+    border-radius: 50%;
+    margin-left: 1rem;
+    height: 3px;
+    vertical-align: middle;
+    position: relative;
+    top: -1px;
+    width: 3px;
+}
+
+.post .meta li:not(:last-child) {
+    margin-right: 0.8rem;
+}
+
+.featured-post-lg {
+    position: relative;
+}
+
+.featured-post-lg:hover .thumb .inner {
+    transform: scale(1.05);
+}
+
+.featured-post-lg .thumb {
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 8px 20px rgba(32, 54, 86, 0.3);
+}
+
+.featured-post-lg .thumb::after {
+    content: "";
+    background: var(--dark-blue);
+    display: block;
+    height: 100%;
+    left: 0;
+    opacity: 0.6;
+    top: 0;
+    position: absolute;
+    width: 100%;
+}
+
+.featured-post-lg .details {
+    bottom: 50px;
+    left: 50px;
+    right: 50px;
+    position: absolute;
+    z-index: 1;
+}
+
+.featured-post-lg .post-title {
+    font-size: 32px;
+}
+
+.featured-post-lg .post-title a {
+    color: var(--white);
+}
+
+.featured-post-lg .thumb .inner {
+    background-size: cover;
+    background-position: center center;
+    height: 533px;
+    transition: all 0.3s ease-in-out;
+    transform: scale(1);
+}
+
+.featured-post-lg .post-title a:hover {
+    color: var(--bright-blue);
+}
+
+.featured-post-lg .meta {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.featured-post-lg .meta li::after {
+    content: "";
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.featured-post-lg .meta li a {
+    color: rgba(255, 255, 255, 0.6);
 }
