--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --nice-blue: #006fae;
     --light-greenish-blue: #138086;
     --bright-blue: #4adede;
-    --pink: #e90964;
+    --pink: #EA4492;
     --purple: #ae16cc;
     --white: #ffffff;
     --grey: #8f9bad;
@@ -703,7 +703,7 @@ section {
 
 .post .meta {
     font-size: 14px;
-    color: var(--light-grey);
+    color: var(--grey);
 }
 
 .post .meta a {
@@ -806,4 +806,161 @@ section {
 
 .featured-post-lg .meta li a {
     color: rgba(255, 255, 255, 0.6);
+}
+
+/* Hero Right Section */
+
+.rounded {
+    border-radius: 10px !important;
+}
+
+.bordered {
+    border: 1px solid var(--light-grey);
+}
+
+.post-tabs {
+    padding: 30px;
+}
+
+.post-tabs .tab-content {
+    margin-top: 30px;
+}
+
+.nav-tabs {
+    border-bottom: 0;
+}
+
+.tab-content {
+    position: relative;
+}
+
+.tab-pane {
+    opacity: 1;
+    transition: all 0.3s ease-in-out;
+}
+
+.tab-pane.loading {
+    opacity: 0.3;
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    position: absolute;
+    right: 40px;
+    height: 40px;
+    top: 50%;
+    left: 50%;
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    transition: all 0.2s ease-in-out;
+    z-index: 1;
+}
+
+.lds-dual-ring.loading {
+    visibility: visible;
+    opacity: 1;
+}
+
+.lds-dual-ring::after {
+    content: " ";
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 3px solid;
+    border-color: var(--nice-blue) transparent var(--nice-blue) transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.nav-fill .nav-item, .nav-fill>.nav-link {
+    margin-right: 10px;
+}
+
+.nav-fill .nav-item:last-child, .nav-fill>.nav-link:last-child {
+    margin-right: 0;
+}
+
+.nav-fill .nav-item>.nav-link {
+    color: var(--grey) !important;
+    margin-right: 10px;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: var(--white) !important;
+    background-color: var(--dark-blue);
+    background-image: linear-gradient(
+        315deg,
+        var(--dark-blue) 0%,
+        var(--light-greenish-blue) 74%
+    );
+    border-color: transparent;
+    background-size: 200% auto;
+}
+
+.nav-pills .nav-link {
+    background: 0 0;
+    border: 1px solid var(--light-grey);
+    border-radius: 30px;
+}
+
+.post.post-list-sm {
+    clear: both;
+}
+
+.post.post-list-sm.circle .thumb {
+    max-width: 60px;
+}
+
+.post.post-list-sm.circle .details {
+    margin-left: 80px;
+}
+
+.post.post-list-sm .thumb {
+    float: left;
+    position: relative;
+}
+
+.post .thumb {
+    position: relative;
+}
+
+.post .thumb.rounded .inner {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.post .thumb.circle .inner {
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.post.post-list-sm .post-title {
+    font-size: 15px;
+}
+
+.post.post-list-sm::after {
+    content: "";
+    display: block;
+    height: 1px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+    background: var(--light-grey);
+    background: linear-gradient(to left, var(--light-grey) 0%, var(--light-grey) 100%);
+}
+
+.post.post-list-sm:last-child::after {
+    content: "";
+    display: none;
 }
