--- a/css/style.css
+++ b/css/style.css
@@ -985,7 +985,7 @@ section {
 }
 
 .post .post-format {
-    color: #fff;
+    color: var(--white);
     display: block;
     border-radius: 50%;
     font-size: 20px;
@@ -997,8 +997,12 @@ section {
     position: absolute;
     width: 50px;
     box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.15);
-    background-color: #6e72fc;
-    background: linear-gradient(315deg, #6e72fc 0%, #ad1deb 74%);
+    background-color: var(--dark-blue);
+    background-image: linear-gradient(
+        315deg,
+        var(--dark-blue) 0%,
+        var(--light-greenish-blue) 74%
+    );
     z-index: 1;
 }
 
@@ -1023,8 +1027,8 @@ section {
     margin-bottom: 20px;
     margin-top: 20px;
     width: 100%;
-    background: #ebebeb;
-    background: linear-gradient(to left, #ebebeb 0%, transparent 100%);
+    background: var(--light-grey);
+    background: linear-gradient(to left, var(--light-grey) 0%, var(--light-grey) 100%);
 }
 
 .post.post-list-sm.before-seperator::after {
