--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Base CSS */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Bubbles&display=swap");
 
 :root {
   --yellow: #febb12;
@@ -76,78 +76,80 @@ a:focus {
   outline: 0;
 }
 
-.site-content{
-    display: none;
+.site-content {
+  display: none;
 }
 /* Site Loader */
-.loader-wrapper{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #011015;
+.loader-wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #011015;
 }
 .loading-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.ring{
-    width: 250px;
-    height: 250px;
-    border: 0px solid #011015;
-    border-radius: 50%;
-    position: absolute;
-}
-
-.ring:nth-child(1){
-    border-bottom-width: 8px;
-    border-color: rgb(255, 0, 255);
-    animation: rotate1 2s linear infinite;
+.ring {
+  width: 250px;
+  height: 250px;
+  border: 0px solid #011015;
+  border-radius: 50%;
+  position: absolute;
 }
 
-.ring:nth-child(2){
-    border-right-width: 8px;
-    border-color: rgb(0, 247, 255);
-    animation: rotate2 2s linear infinite;
+.ring:nth-child(1) {
+  border-bottom-width: 8px;
+  border-color: rgb(255, 0, 255);
+  animation: rotate1 2s linear infinite;
 }
 
-.ring:nth-child(3){
-    border-top-width: 8px;
-    border-color: rgb(0, 255, 13);
-    animation: rotate3 2s linear infinite;
+.ring:nth-child(2) {
+  border-right-width: 8px;
+  border-color: rgb(0, 247, 255);
+  animation: rotate2 2s linear infinite;
+}
+
+.ring:nth-child(3) {
+  border-top-width: 8px;
+  border-color: rgb(0, 255, 13);
+  animation: rotate3 2s linear infinite;
 }
 
 .loading {
-    color: var(--white);
+  color: var(--white);
+  font-size: 18px;
+  font-family: "Rubik Bubbles", cursive;
 }
-@keyframes rotate1{
-    0%{
-        transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
-    }
-    100%{
-        transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
-    }
-}
-
-@keyframes rotate2{
-    0%{
-        transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
-    }
-    100%{
-        transform: rotateX(50deg) rotateY(-10deg) rotateZ(360deg);
-    }
+@keyframes rotate1 {
+  0% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+  }
 }
 
-@keyframes rotate3{
-    0%{
-        transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
-    }
-    100%{
-        transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
-    }
+@keyframes rotate2 {
+  0% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(50deg) rotateY(-10deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate3 {
+  0% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+  }
 }
 
 /* Header CSS */
