--- a/css/style.css
+++ b/css/style.css
@@ -357,61 +357,6 @@ body.down .header-default.clone {
   margin-left: 0;
 }
 
-@media (min-width: 992px) {
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 1.3rem;
-    padding-left: 1.3rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container-xl {
-    max-width: 1140px;
-  }
-}
-
-@media (min-width: 1400px) {
-  .container-xl {
-    max-width: 1140px;
-  }
-}
-
-@media only screen and (max-width: 1200px) {
-  .header-right .social-icons {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  .navbar .nav-item .dropdown-menu {
-    display: none;
-    animation: growOut 300ms ease-in-out forwards;
-    transform-origin: top center;
-  }
-
-  @keyframes growOut {
-    0% {
-      transform: scale(0);
-    }
-
-    80% {
-      transform: scale(1.1);
-    }
-
-    100% {
-      transform: scale(1);
-    }
-  }
-
-  .navbar .nav-item:hover .dropdown-menu {
-    display: block;
-  }
-
-  .navbar .nav-item .dropdown-menu {
-    margin-top: 0;
-  }
-}
-
 button {
   transition: all 0.3s ease-in-out;
 }
@@ -1334,4 +1279,117 @@ section {
 .btn-simple:hover {
   color: var(--persian-blue);
   border-color: var(--dark-blue);
+}
+
+/* Responsive */
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 1.3rem;
+    padding-left: 1.3rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container-xl {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container-xl {
+    max-width: 1140px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .header-right .social-icons {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .navbar .nav-item .dropdown-menu {
+    display: none;
+    animation: growOut 300ms ease-in-out forwards;
+    transform-origin: top center;
+  }
+
+  @keyframes growOut {
+    0% {
+      transform: scale(0);
+    }
+
+    80% {
+      transform: scale(1.1);
+    }
+
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  .navbar .nav-item:hover .dropdown-menu {
+    display: block;
+  }
+
+  .navbar .nav-item .dropdown-menu {
+    margin-top: 0;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .inner-wrapper-sticky {
+    transform: none !important;
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: auto !important;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .featured-post-lg .thumb .inner {
+    height: 425px;
+  }
+  .post.post-list .thumb {
+    float: none;
+    max-width: 550px;
+  }
+  .post.post-list .details {
+    margin-left: 0;
+    margin-top: 25px;
+  }
+  .post .meta li::after {
+    content: "";
+    margin-left: 0.5rem;
+  }
+  .post .meta li:not(:last-child) {
+    margin-right: 0.3rem;
+  }
+  .instagram-feed .insta-item {
+    text-align: center;
+    margin: 2.5px 0;
+  }
+  .footer-inner {
+    text-align: center;
+  }
+  .featured-post-lg .post-title {
+    font-size: 26px;
+  }
+  .featured-post-lg .details {
+    bottom: 30px;
+    left: 30px;
+    right: 30px;
+  }
+  .search-popup .search-content {
+    padding: 0px 20px;
+    width: 100%;
+  }
+  .post-carousel-widget .post-carousel {
+    margin: 0 12px;
+  }
+  .post-carousel-widget .post-carousel .post-title {
+    font-size: 16px;
+  }
 }
